--- a/portfolio.html
+++ b/portfolio.html
@@ -87,14 +87,14 @@
 
           <h2 class="visually-hidden">Товар</h2>
           <ul class="list card-set">
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img src="./images/port1.jpg" alt="Технокряк" />
               <div class="card">
                 <h3 class="client-name">Технокряк</h3>
                 <p class="client-position">Веб-сайт</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port2.jpg"
                 alt="Постер New Orlean vs Golden Star"
@@ -104,7 +104,7 @@
                 <p class="client-position">Дизайн</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port3.jpg"
                 width="370"
@@ -116,7 +116,7 @@
                 <p class="client-position">Приложение</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port4.jpg"
                 width="370"
@@ -128,7 +128,7 @@
                 <p class="client-position">Маркетинг</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port5.jpg"
                 width="370"
@@ -140,7 +140,7 @@
                 <p class="client-position">Приложение</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port6.jpg"
                 width="370"
@@ -153,7 +153,7 @@
                 <p class="client-position">Веб-сайт</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port7.jpg"
                 width="370"
@@ -166,7 +166,7 @@
                 <p class="client-position">Дизайн</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port8.jpg"
                 width="370"
@@ -178,7 +178,7 @@
                 <p class="client-position">Маркетинг</p>
               </div>
             </li>
-            <li class="item card-list">
+            <li class="item card-list company-link">
               <img
                 src="./images/port9.jpg"
                 width="370"
