--- a/portfolio.html
+++ b/portfolio.html
@@ -69,126 +69,150 @@
           <h2 class="visually-hidden">Фильтр</h2>
           <ul class="list btn-list">
             <li class="btn-list-item">
-              <button class="btn pointer" type="button">Все</button>
+              <button class="btn pointer btn-link" type="button">Все</button>
             </li>
             <li class="btn-list-item">
-              <button class="btn pointer" type="button">Веб-сайты</button>
+              <button class="btn pointer btn-link" type="button">
+                Веб-сайты
+              </button>
             </li>
             <li class="btn-list-item">
-              <button class="btn pointer" type="button">Приложения</button>
+              <button class="btn pointer btn-link" type="button">
+                Приложения
+              </button>
             </li>
             <li class="btn-list-item">
-              <button class="btn pointer" type="button">Дизайн</button>
+              <button class="btn pointer btn-link" type="button">Дизайн</button>
             </li>
             <li class="btn-list-item">
-              <button class="btn pointer" type="button">Маркетинг</button>
+              <button class="btn pointer btn-link" type="button">
+                Маркетинг
+              </button>
             </li>
           </ul>
 
           <h2 class="visually-hidden">Товар</h2>
           <ul class="list card-set">
             <li class="item card-list company-link">
-              <img src="./images/port1.jpg" alt="Технокряк" />
-              <div class="card">
-                <h3 class="client-name">Технокряк</h3>
-                <p class="client-position">Веб-сайт</p>
-              </div>
+              <a class="link" href="">
+                <img src="./images/port1.jpg" alt="Технокряк" />
+                <div class="card">
+                  <h3 class="client-name">Технокряк</h3>
+                  <p class="client-position">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-              <div class="card">
-                <h3 class="client-name">Постер New Orlean vs Golden Star</h3>
-                <p class="client-position">Дизайн</p>
-              </div>
+              <a class="link" href=""
+                ><img
+                  src="./images/port2.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                />
+                <div class="card">
+                  <h3 class="client-name">Постер New Orlean vs Golden Star</h3>
+                  <p class="client-position">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port3.jpg"
-                width="370"
-                height="294"
-                alt="Ресторан Seafood"
-              />
-              <div class="card">
-                <h3 class="client-name">Ресторан Seafood</h3>
-                <p class="client-position">Приложение</p>
-              </div>
+              <a class="link" href=""
+                ><img
+                  src="./images/port3.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ресторан Seafood"
+                />
+                <div class="card">
+                  <h3 class="client-name">Ресторан Seafood</h3>
+                  <p class="client-position">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port4.jpg"
-                width="370"
-                height="294"
-                alt="Проект Prime"
-              />
-              <div class="card">
-                <h3 class="client-name">Проект Prime</h3>
-                <p class="client-position">Маркетинг</p>
-              </div>
+              <a class="link" href=""
+                ><img
+                  src="./images/port4.jpg"
+                  width="370"
+                  height="294"
+                  alt="Проект Prime"
+                />
+                <div class="card">
+                  <h3 class="client-name">Проект Prime</h3>
+                  <p class="client-position">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port5.jpg"
-                width="370"
-                height="294"
-                alt="Проект Boxes"
-              />
-              <div class="card">
-                <h3 class="client-name">Проект Boxes</h3>
-                <p class="client-position">Приложение</p>
-              </div>
+              <a class="link" href=""
+                ><img
+                  src="./images/port5.jpg"
+                  width="370"
+                  height="294"
+                  alt="Проект Boxes"
+                />
+                <div class="card">
+                  <h3 class="client-name">Проект Boxes</h3>
+                  <p class="client-position">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port6.jpg"
-                width="370"
-                height="294"
-                alt="Inspiration has no
+              <a class="link" href=""
+                ><img
+                  src="./images/port6.jpg"
+                  width="370"
+                  height="294"
+                  alt="Inspiration has no
             Borders"
-              />
-              <div class="card">
-                <h3 class="client-name">Inspiration has no Borders</h3>
-                <p class="client-position">Веб-сайт</p>
-              </div>
+                />
+                <div class="card">
+                  <h3 class="client-name">Inspiration has no Borders</h3>
+                  <p class="client-position">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port7.jpg"
-                width="370"
-                height="294"
-                alt="Издание Limited
+              <a class="link" href=""
+                ><img
+                  src="./images/port7.jpg"
+                  width="370"
+                  height="294"
+                  alt="Издание Limited
             Edition"
-              />
-              <div class="card">
-                <h3 class="client-name">Издание Limited Edition</h3>
-                <p class="client-position">Дизайн</p>
-              </div>
+                />
+                <div class="card">
+                  <h3 class="client-name">Издание Limited Edition</h3>
+                  <p class="client-position">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port8.jpg"
-                width="370"
-                height="294"
-                alt="Проект LAB"
-              />
-              <div class="card">
-                <h3 class="client-name">Проект LAB</h3>
-                <p class="client-position">Маркетинг</p>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/port8.jpg"
+                  width="370"
+                  height="294"
+                  alt="Проект LAB"
+                />
+                <div class="card">
+                  <h3 class="client-name">Проект LAB</h3>
+                  <p class="client-position">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item card-list company-link">
-              <img
-                src="./images/port9.jpg"
-                width="370"
-                height="294"
-                alt="Growing Business"
-              />
-              <div class="card">
-                <h3 class="client-name">Growing Business</h3>
-                <p class="client-position">Приложение</p>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/port9.jpg"
+                  width="370"
+                  height="294"
+                  alt="Growing Business"
+                />
+                <div class="card">
+                  <h3 class="client-name">Growing Business</h3>
+                  <p class="client-position">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
